mm_web_app/styles/pages/_home.scss
/* ... */
.preview-child-topics {
  &::before {
    @include transform(scale(0.96));
    @include border-radius(5px);
    @include abs-pos ($top: 0, $right: 0, $bottom: 0, $left: 0);
    @include transition (all 0.3s cubic-bezier(.25, .8, .25, 1));
    -webkit-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.12), 0 0px 5px rgba(0, 0, 0, 0.24);
    -moz-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.12), 0 0px 5px rgba(0, 0, 0, 0.24);
    box-shadow: 0 0px 5px rgba(0, 0, 0, 0.12), 0 0px 5px rgba(0, 0, 0, 0.24);
    opacity: 0;
    content: " ";
    height: 100%;
    width: 100%;
    pointer-events: none;
    z-index: 3;
  }
  &:hover::before {
    -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.2), 0 3px 9px rgba(0, 0, 0, 0.18);
    -moz-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.2), 0 3px 9px rgba(0, 0, 0, 0.18);
    box-shadow: 0 3px 9px rgba(0, 0, 0, 0.2), 0 3px 9px rgba(0, 0, 0, 0.18);
    -webkit-animation: tapAnimation 0.25s cubic-bezier(0.31, 1, 0.34, 1) forwards;
    animation: tapAnimation 0.25s cubic-bezier(0.31, 1, 0.34, 1) forwards;
  }
  .thumbnail {
    margin: 1px 2px;
    cursor: pointer;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    &:hover,
    &:focus {
      box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
      -moz-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
      -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
    }
  }
}

/* tooltip */


/* hotfix for carousel arrow */
.carousel-wrapper {
  padding: 0 10px;
  .carousel-outer {
    &.previous {
      &::before {
        position: absolute;
        content: " ";
        left: 0;
        top: 0;
        height: 50px;
        width: 100px;
        z-index: 1;
        background-image: linear-gradient(to left, rgba(255, 255, 255, 0) 0%, rgb(255, 255, 255) 90%);
      }
    }
    &.next {
      &::after{
        position: absolute;
        content: " ";
        right: 0;
        top: 0;
        height: 50px;
        width: 100px;
        z-index: 1;
        background-image: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, rgb(255, 255, 255) 90%);
      }
    }
  }
  .carousel-nav {
    .owl-prev {
      position: absolute;
      top: -5px;
      left: -25px;
      height: 50px;
      background: #fff;
      color: #d6d6d6;
      font-size: 1.5rem;
      padding: 10px;
      margin-top: 5px;
    }
    .owl-next {
      position: absolute;
      top: -5px;
      right: -25px;
      height: 50px;
      background: #fff;
      color: #d6d6d6;
      font-size: 1.5rem;
      padding: 10px;
      margin-top: 5px;
    }
    .disabled {
      display: none;
    }
  }
}


.topic-number {
  @include border-radius(50%);
  @include abs-pos ($top: -5px, $right: -15px, $bottom: auto, $left: auto);
  z-index: 100;
  font-size: 11px;
  text-align: center;
  color: #fff;
  background-color: #ccc;
  &.has-selected {
    background-color: #2db7f5;
  }
  width: 30px;
  height: 30px;
  line-height: 30px;
}

.wrapper-slide {
  .sticky {
    z-index: 100;
  }
}


.selected-panel {
  width: 100%;
  z-index: 9999;
  padding: 15px;
  background: #fff;
  transition: all .3s linear;
  .topic-guide {
    height: 50px;
    text-align: center;
  }
  .btn-sign-up {
    background: #008000;
    color: #fff;
    font-size: 1.2rem;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
    &:hover,
    &:focus {
      box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
      -moz-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
      -webkit-box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
    }
  }
  span.text-topic {
    font-size: 1.5rem !important;
    max-width: 400px !important;
    line-height: 30px;
  }
  p.blur-bg {
    .text-topic {
      color: #fff;
    }
  }
  .btn-box-remove {
    @include opacity(0.5);
    @include border-radius(50%);
    margin-left: 5px;
    background-color: #fff;
    color: #abbaa8;
    display: inline-block;
    font-weight: normal;
    height: 30px;
    line-height: 30px;
    width: 30px;
    text-align: center;
    z-index: 2;
    cursor: pointer;
    &:hover,
    &:focus {
      color: #222;
    }
  }
  .selected-topic {
    @include border-radius(20px);
    position: relative;
    border:1px solid #ccc;
    margin: 0 2.5px;
    height: 50px;
    padding: 10px;
    opacity: 0.8
  }
}

.navigation-panel {
  position: fixed;
  z-index: 100;
}

/*animation download*/

@keyframes icon-bounce {
  from {
    transform: translateY(-5px);
  }
  to {
    transform: translateY(0);
  }
}

@keyframes white-pulse {
  from {
    color: rgba(255, 255, 255, 0.2);
  }
  to {
    color: rgba(255, 255, 255, 0.5);
  }
}

@-webkit-keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}


/*animation dog pulse*/

@-webkit-keyframes dog-pulse {
  0% {
    -webkit-transform: scale(0.7, 0.7);
    transform: scale(0.7, 0.7);
  }
  50% {
    -webkit-transform: scale(1.1, 1.1);
    transform: scale(1.1, 1.1);
  }
  100% {
    -webkit-transform: scale(0.7, 0.7);
    transform: scale(0.7, 0.7);
  }
}

@keyframes dog-pulse {
  0% {
    -webkit-transform: scale(0.7, 0.7);
    transform: scale(0.7, 0.7);
  }
  50% {
    -webkit-transform: scale(1.1, 1.1);
    transform: scale(1.1, 1.1);
  }
  100% {
    -webkit-transform: scale(0.7, 0.7);
    transform: scale(0.7, 0.7);
  }
}
/* ... */

